force-app/main/default/objects/IBM_Contacts__x/IBM_Contacts__x.object-meta.xml
<CustomObject>
    <description>IBM_Contacts</description>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>IBM_Contacts</externalName>
    <label>IBM_Contacts</label>
    <pluralLabel>IBM_Contacts</pluralLabel>
</CustomObject>