force-app/main/default/objects/IBM_Contacts__x/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age</description>
    <externalDeveloperName>Age</externalDeveloperName>
    <label>Age</label>
    <length>128</length>
    <type>Text</type>
</CustomField>