force-app/main/default/objects/IBM_Contacts__x/fields/BankingType__c.field-meta.xml
<CustomField>
    <fullName>BankingType__c</fullName>
    <description>BankingType</description>
    <externalDeveloperName>BankingType</externalDeveloperName>
    <label>BankingType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>