force-app/main/default/objects/IBM_Contacts__x/fields/CountryOfResidency__c.field-meta.xml
<CustomField>
    <fullName>CountryOfResidency__c</fullName>
    <description>CountryOfResidency</description>
    <externalDeveloperName>CountryOfResidency</externalDeveloperName>
    <label>CountryOfResidency</label>
    <length>128</length>
    <type>Text</type>
</CustomField>