force-app/main/default/objects/IBM_Contacts__x/fields/EnglishFirstName__c.field-meta.xml
<CustomField>
    <fullName>EnglishFirstName__c</fullName>
    <description>EnglishFirstName</description>
    <externalDeveloperName>EnglishFirstName</externalDeveloperName>
    <label>EnglishFirstName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>