force-app/main/default/objects/IBM_Contacts__x/fields/EnglishLastName__c.field-meta.xml
<CustomField>
    <fullName>EnglishLastName__c</fullName>
    <description>EnglishLastName</description>
    <externalDeveloperName>EnglishLastName</externalDeveloperName>
    <label>EnglishLastName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>