force-app/main/default/objects/IBM_Contacts__x/fields/GUID_c__c.field-meta.xml
<CustomField>
    <fullName>GUID_c__c</fullName>
    <description>GUID__c</description>
    <externalDeveloperName>GUID__c</externalDeveloperName>
    <label>GUID__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>