force-app/main/default/objects/IBM_Contacts__x/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <description>MaritalStatus</description>
    <externalDeveloperName>MaritalStatus</externalDeveloperName>
    <label>MaritalStatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>