force-app/main/default/objects/IBM_Contacts__x/fields/WeddingDate__c.field-meta.xml
<CustomField>
    <fullName>WeddingDate__c</fullName>
    <description>WeddingDate</description>
    <externalDeveloperName>WeddingDate</externalDeveloperName>
    <label>WeddingDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>